<resources>
    <string name="app_name">Calculator</string>

    <string name="bt_point">.</string>
    <string name="bt_0">0</string>
    <string name="bt_equal">=</string>
    <string name="bt_plus">+</string>

    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_minus">-</string>

    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_multiply">×</string>

    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_divide">÷</string>

    <string name="bt_clear">C</string>
    <string name="bt_backspace">⌫</string>
    <string name="input">in...</string>
    <string name="output">out...</string>
</resources>