<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_point"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_point"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_0"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_point"
        app:layout_constraintEnd_toStartOf="@id/bt_equal"
        app:layout_constraintStart_toEndOf="@+id/bt_point"
        app:layout_constraintTop_toTopOf="@+id/bt_point" />

    <Button
        android:id="@+id/bt_equal"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_equal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_0"
        app:layout_constraintEnd_toStartOf="@id/bt_plus"
        app:layout_constraintStart_toEndOf="@id/bt_0"
        app:layout_constraintTop_toTopOf="@+id/bt_0" />

    <Button
        android:id="@+id/bt_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_plus"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_equal"
        app:layout_constraintTop_toTopOf="@+id/bt_equal" />

    <Button
        android:id="@+id/bt_1"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/bt_point"
        app:layout_constraintEnd_toStartOf="@id/bt_2"
        app:layout_constraintStart_toStartOf="@+id/bt_point" />

    <Button
        android:id="@+id/bt_2"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_1"
        app:layout_constraintEnd_toStartOf="@+id/bt_3"
        app:layout_constraintStart_toEndOf="@+id/bt_1"
        app:layout_constraintTop_toTopOf="@id/bt_1" />

    <Button
        android:id="@+id/bt_3"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_2"
        app:layout_constraintEnd_toStartOf="@+id/bt_minus"
        app:layout_constraintStart_toEndOf="@+id/bt_2"
        app:layout_constraintTop_toTopOf="@id/bt_2" />

    <Button
        android:id="@+id/bt_minus"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_minus"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_3"
        app:layout_constraintTop_toTopOf="@id/bt_3" />

    <Button
        android:id="@+id/bt_4"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/bt_1"
        app:layout_constraintEnd_toStartOf="@+id/bt_5"
        app:layout_constraintStart_toStartOf="@+id/bt_1" />

    <Button
        android:id="@+id/bt_5"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_4"
        app:layout_constraintEnd_toStartOf="@+id/bt_6"
        app:layout_constraintStart_toEndOf="@+id/bt_4"
        app:layout_constraintTop_toTopOf="@id/bt_4" />

    <Button
        android:id="@+id/bt_6"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@id/bt_5"
        app:layout_constraintEnd_toStartOf="@+id/bt_multiply"
        app:layout_constraintStart_toEndOf="@+id/bt_5"
        app:layout_constraintTop_toTopOf="@id/bt_5" />

    <Button
        android:id="@+id/bt_multiply"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_multiply"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@id/bt_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_6"
        app:layout_constraintTop_toTopOf="@id/bt_6" />

    <Button
        android:id="@+id/bt_7"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_7"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/bt_4"
        app:layout_constraintEnd_toStartOf="@+id/bt_8"
        app:layout_constraintStart_toStartOf="@+id/bt_1" />

    <Button
        android:id="@+id/bt_8"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_7"
        app:layout_constraintEnd_toStartOf="@+id/bt_9"
        app:layout_constraintStart_toEndOf="@+id/bt_7"
        app:layout_constraintTop_toTopOf="@id/bt_7" />

    <Button
        android:id="@+id/bt_9"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_9"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@id/bt_8"
        app:layout_constraintEnd_toStartOf="@+id/bt_divide"
        app:layout_constraintStart_toEndOf="@+id/bt_8"
        app:layout_constraintTop_toTopOf="@id/bt_8" />

    <Button
        android:id="@+id/bt_divide"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_divide"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@id/bt_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_9"
        app:layout_constraintTop_toTopOf="@id/bt_9" />

    <Button
        android:id="@+id/bt_clear"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/bt_7"
        app:layout_constraintEnd_toStartOf="@+id/bt_backspace"
        app:layout_constraintStart_toStartOf="@+id/bt_7" />

    <Button
        android:id="@+id/bt_backspace"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_backspace"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/bt_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_clear"
        app:layout_constraintTop_toTopOf="@+id/bt_clear" />

    <TextView
        android:id="@+id/tx_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/tx_in"
        app:layout_constraintEnd_toEndOf="@+id/tx_in" />

    <TextView
        android:id="@+id/tx_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/bt_backspace"
        app:layout_constraintEnd_toEndOf="@+id/bt_backspace" />

</androidx.constraintlayout.widget.ConstraintLayout>